--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Do not ignore solution files inside the mono module. Overrides Godot's global gitignore.
+# Do not ignore solution files inside the mono module. Overrides Pandemonium's global gitignore.
 !*.sln
 
 .import
